--- a/Algorithms/HFGKBA_krep.ipynb
+++ b/Algorithms/HFGKBA_krep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "69cc0c82-a799-4c37-a1ec-167c41e0ab58",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "⊗ (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,6 +36,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "41e231e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "size = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "de65c5cb-f464-45a9-95fa-90de102765c2",
    "metadata": {},
@@ -49,7 +70,7 @@
     "k_Boltzman = 0.00008617343 ;#(eV/K) # 1.3806504d-23 (J/K)\n",
     "### Parameters and initiallizations\n",
     "ny = 1\n",
-    "nx = 2\n",
+    "nx = size\n",
     "ns = nx*ny\n",
     "nσ = 2\n",
     "nk = 400\n",
@@ -471,7 +492,7 @@
     "function init_params()\n",
     "    \"\"\"Returns the structures with the initial parameters\"\"\"\n",
     "    #### global parameters\n",
-    "    nx = 2\n",
+    "    nx = size\n",
     "    ny = 1\n",
     "    ns = nx*ny\n",
     "    nσ = 2\n",
@@ -689,7 +710,7 @@
     "### Evolution of the dynamics \n",
     "t_0 = 0.0\n",
     "t_step = 0.1\n",
-    "t_end = 50#100\n",
+    "t_end = 10#100\n",
     "name = \"test\"\n",
     "function main()\n",
     "    ##### Initial conditions \n",
@@ -766,512 +787,29 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial condition\n",
-      "Starting time evolution\n",
-      "time: 0.1\n",
-      "time: 0.2\n",
-      "time: 0.3\n",
-      "time: 0.4\n",
-      "time: 0.5\n",
-      "time: 0.6\n",
-      "time: 0.7\n",
-      "time: 0.8\n",
-      "time: 0.9\n",
-      "time: 1.0\n",
-      "time: 1.1\n",
-      "time: 1.2\n",
-      "time: 1.3\n",
-      "time: 1.4\n",
-      "time: 1.5\n",
-      "time: 1.6\n",
-      "time: 1.7\n",
-      "time: 1.8\n",
-      "time: 1.9\n",
-      "time: 2.0\n",
-      "time: 2.1\n",
-      "time: 2.2\n",
-      "time: 2.3\n",
-      "time: 2.4\n",
-      "time: 2.5\n",
-      "time: 2.6\n",
-      "time: 2.7\n",
-      "time: 2.8\n",
-      "time: 2.9\n",
-      "time: 3.0\n",
-      "time: 3.1\n",
-      "time: 3.2\n",
-      "time: 3.3\n",
-      "time: 3.4\n",
-      "time: 3.5\n",
-      "time: 3.6\n",
-      "time: 3.7\n",
-      "time: 3.8\n",
-      "time: 3.9\n",
-      "time: 4.0\n",
-      "time: 4.1\n",
-      "time: 4.2\n",
-      "time: 4.3\n",
-      "time: 4.4\n",
-      "time: 4.5\n",
-      "time: 4.6\n",
-      "time: 4.7\n",
-      "time: 4.8\n",
-      "time: 4.9\n",
-      "time: 5.0\n",
-      "time: 5.1\n",
-      "time: 5.2\n",
-      "time: 5.3\n",
-      "time: 5.4\n",
-      "time: 5.5\n",
-      "time: 5.6\n",
-      "time: 5.7\n",
-      "time: 5.8\n",
-      "time: 5.9\n",
-      "time: 6.0\n",
-      "time: 6.1\n",
-      "time: 6.2\n",
-      "time: 6.3\n",
-      "time: 6.4\n",
-      "time: 6.5\n",
-      "time: 6.6\n",
-      "time: 6.7\n",
-      "time: 6.8\n",
-      "time: 6.9\n",
-      "time: 7.0\n",
-      "time: 7.1\n",
-      "time: 7.2\n",
-      "time: 7.3\n",
-      "time: 7.4\n",
-      "time: 7.5\n",
-      "time: 7.6\n",
-      "time: 7.7\n",
-      "time: 7.8\n",
-      "time: 7.9\n",
-      "time: 8.0\n",
-      "time: 8.1\n",
-      "time: 8.2\n",
-      "time: 8.3\n",
-      "time: 8.4\n",
-      "time: 8.5\n",
-      "time: 8.6\n",
-      "time: 8.7\n",
-      "time: 8.8\n",
-      "time: 8.9\n",
-      "time: 9.0\n",
-      "time: 9.1\n",
-      "time: 9.2\n",
-      "time: 9.3\n",
-      "time: 9.4\n",
-      "time: 9.5\n",
-      "time: 9.6\n",
-      "time: 9.7\n",
-      "time: 9.8\n",
-      "time: 9.9\n",
-      "time: 10.0\n",
-      "time: 10.1\n",
-      "time: 10.2\n",
-      "time: 10.3\n",
-      "time: 10.4\n",
-      "time: 10.5\n",
-      "time: 10.6\n",
-      "time: 10.7\n",
-      "time: 10.8\n",
-      "time: 10.9\n",
-      "time: 11.0\n",
-      "time: 11.1\n",
-      "time: 11.2\n",
-      "time: 11.3\n",
-      "time: 11.4\n",
-      "time: 11.5\n",
-      "time: 11.6\n",
-      "time: 11.7\n",
-      "time: 11.8\n",
-      "time: 11.9\n",
-      "time: 12.0\n",
-      "time: 12.1\n",
-      "time: 12.2\n",
-      "time: 12.3\n",
-      "time: 12.4\n",
-      "time: 12.5\n",
-      "time: 12.6\n",
-      "time: 12.7\n",
-      "time: 12.8\n",
-      "time: 12.9\n",
-      "time: 13.0\n",
-      "time: 13.1\n",
-      "time: 13.2\n",
-      "time: 13.3\n",
-      "time: 13.4\n",
-      "time: 13.5\n",
-      "time: 13.6\n",
-      "time: 13.7\n",
-      "time: 13.8\n",
-      "time: 13.9\n",
-      "time: 14.0\n",
-      "time: 14.1\n",
-      "time: 14.2\n",
-      "time: 14.3\n",
-      "time: 14.4\n",
-      "time: 14.5\n",
-      "time: 14.6\n",
-      "time: 14.7\n",
-      "time: 14.8\n",
-      "time: 14.9\n",
-      "time: 15.0\n",
-      "time: 15.1\n",
-      "time: 15.2\n",
-      "time: 15.3\n",
-      "time: 15.4\n",
-      "time: 15.5\n",
-      "time: 15.6\n",
-      "time: 15.7\n",
-      "time: 15.8\n",
-      "time: 15.9\n",
-      "time: 16.0\n",
-      "time: 16.1\n",
-      "time: 16.2\n",
-      "time: 16.3\n",
-      "time: 16.4\n",
-      "time: 16.5\n",
-      "time: 16.6\n",
-      "time: 16.7\n",
-      "time: 16.8\n",
-      "time: 16.9\n",
-      "time: 17.0\n",
-      "time: 17.1\n",
-      "time: 17.2\n",
-      "time: 17.3\n",
-      "time: 17.4\n",
-      "time: 17.5\n",
-      "time: 17.6\n",
-      "time: 17.7\n",
-      "time: 17.8\n",
-      "time: 17.9\n",
-      "time: 18.0\n",
-      "time: 18.1\n",
-      "time: 18.2\n",
-      "time: 18.3\n",
-      "time: 18.4\n",
-      "time: 18.5\n",
-      "time: 18.6\n",
-      "time: 18.7\n",
-      "time: 18.8\n",
-      "time: 18.9\n",
-      "time: 19.0\n",
-      "time: 19.1\n",
-      "time: 19.2\n",
-      "time: 19.3\n",
-      "time: 19.4\n",
-      "time: 19.5\n",
-      "time: 19.6\n",
-      "time: 19.7\n",
-      "time: 19.8\n",
-      "time: 19.9\n",
-      "time: 20.0\n",
-      "time: 20.1\n",
-      "time: 20.2\n",
-      "time: 20.3\n",
-      "time: 20.4\n",
-      "time: 20.5\n",
-      "time: 20.6\n",
-      "time: 20.7\n",
-      "time: 20.8\n",
-      "time: 20.9\n",
-      "time: 21.0\n",
-      "time: 21.1\n",
-      "time: 21.2\n",
-      "time: 21.3\n",
-      "time: 21.4\n",
-      "time: 21.5\n",
-      "time: 21.6\n",
-      "time: 21.7\n",
-      "time: 21.8\n",
-      "time: 21.9\n",
-      "time: 22.0\n",
-      "time: 22.1\n",
-      "time: 22.2\n",
-      "time: 22.3\n",
-      "time: 22.4\n",
-      "time: 22.5\n",
-      "time: 22.6\n",
-      "time: 22.7\n",
-      "time: 22.8\n",
-      "time: 22.9\n",
-      "time: 23.0\n",
-      "time: 23.1\n",
-      "time: 23.2\n",
-      "time: 23.3\n",
-      "time: 23.4\n",
-      "time: 23.5\n",
-      "time: 23.6\n",
-      "time: 23.7\n",
-      "time: 23.8\n",
-      "time: 23.9\n",
-      "time: 24.0\n",
-      "time: 24.1\n",
-      "time: 24.2\n",
-      "time: 24.3\n",
-      "time: 24.4\n",
-      "time: 24.5\n",
-      "time: 24.6\n",
-      "time: 24.7\n",
-      "time: 24.8\n",
-      "time: 24.9\n",
-      "time: 25.0\n",
-      "time: 25.1\n",
-      "time: 25.2\n",
-      "time: 25.3\n",
-      "time: 25.4\n",
-      "time: 25.5\n",
-      "time: 25.6\n",
-      "time: 25.7\n",
-      "time: 25.8\n",
-      "time: 25.9\n",
-      "time: 26.0\n",
-      "time: 26.1\n",
-      "time: 26.2\n",
-      "time: 26.3\n",
-      "time: 26.4\n",
-      "time: 26.5\n",
-      "time: 26.6\n",
-      "time: 26.7\n",
-      "time: 26.8\n",
-      "time: 26.9\n",
-      "time: 27.0\n",
-      "time: 27.1\n",
-      "time: 27.2\n",
-      "time: 27.3\n",
-      "time: 27.4\n",
-      "time: 27.5\n",
-      "time: 27.6\n",
-      "time: 27.7\n",
-      "time: 27.8\n",
-      "time: 27.9\n",
-      "time: 28.0\n",
-      "time: 28.1\n",
-      "time: 28.2\n",
-      "time: 28.3\n",
-      "time: 28.4\n",
-      "time: 28.5\n",
-      "time: 28.6\n",
-      "time: 28.7\n",
-      "time: 28.8\n",
-      "time: 28.9\n",
-      "time: 29.0\n",
-      "time: 29.1\n",
-      "time: 29.2\n",
-      "time: 29.3\n",
-      "time: 29.4\n",
-      "time: 29.5\n",
-      "time: 29.6\n",
-      "time: 29.7\n",
-      "time: 29.8\n",
-      "time: 29.9\n",
-      "time: 30.0\n",
-      "time: 30.1\n",
-      "time: 30.2\n",
-      "time: 30.3\n",
-      "time: 30.4\n",
-      "time: 30.5\n",
-      "time: 30.6\n",
-      "time: 30.7\n",
-      "time: 30.8\n",
-      "time: 30.9\n",
-      "time: 31.0\n",
-      "time: 31.1\n",
-      "time: 31.2\n",
-      "time: 31.3\n",
-      "time: 31.4\n",
-      "time: 31.5\n",
-      "time: 31.6\n",
-      "time: 31.7\n",
-      "time: 31.8\n",
-      "time: 31.9\n",
-      "time: 32.0\n",
-      "time: 32.1\n",
-      "time: 32.2\n",
-      "time: 32.3\n",
-      "time: 32.4\n",
-      "time: 32.5\n",
-      "time: 32.6\n",
-      "time: 32.7\n",
-      "time: 32.8\n",
-      "time: 32.9\n",
-      "time: 33.0\n",
-      "time: 33.1\n",
-      "time: 33.2\n",
-      "time: 33.3\n",
-      "time: 33.4\n",
-      "time: 33.5\n",
-      "time: 33.6\n",
-      "time: 33.7\n",
-      "time: 33.8\n",
-      "time: 33.9\n",
-      "time: 34.0\n",
-      "time: 34.1\n",
-      "time: 34.2\n",
-      "time: 34.3\n",
-      "time: 34.4\n",
-      "time: 34.5\n",
-      "time: 34.6\n",
-      "time: 34.7\n",
-      "time: 34.8\n",
-      "time: 34.9\n",
-      "time: 35.0\n",
-      "time: 35.1\n",
-      "time: 35.2\n",
-      "time: 35.3\n",
-      "time: 35.4\n",
-      "time: 35.5\n",
-      "time: 35.6\n",
-      "time: 35.7\n",
-      "time: 35.8\n",
-      "time: 35.9\n",
-      "time: 36.0\n",
-      "time: 36.1\n",
-      "time: 36.2\n",
-      "time: 36.3\n",
-      "time: 36.4\n",
-      "time: 36.5\n",
-      "time: 36.6\n",
-      "time: 36.7\n",
-      "time: 36.8\n",
-      "time: 36.9\n",
-      "time: 37.0\n",
-      "time: 37.1\n",
-      "time: 37.2\n",
-      "time: 37.3\n",
-      "time: 37.4\n",
-      "time: 37.5\n",
-      "time: 37.6\n",
-      "time: 37.7\n",
-      "time: 37.8\n",
-      "time: 37.9\n",
-      "time: 38.0\n",
-      "time: 38.1\n",
-      "time: 38.2\n",
-      "time: 38.3\n",
-      "time: 38.4\n",
-      "time: 38.5\n",
-      "time: 38.6\n",
-      "time: 38.7\n",
-      "time: 38.8\n",
-      "time: 38.9\n",
-      "time: 39.0\n",
-      "time: 39.1\n",
-      "time: 39.2\n",
-      "time: 39.3\n",
-      "time: 39.4\n",
-      "time: 39.5\n",
-      "time: 39.6\n",
-      "time: 39.7\n",
-      "time: 39.8\n",
-      "time: 39.9\n",
-      "time: 40.0\n",
-      "time: 40.1\n",
-      "time: 40.2\n",
-      "time: 40.3\n",
-      "time: 40.4\n",
-      "time: 40.5\n",
-      "time: 40.6\n",
-      "time: 40.7\n",
-      "time: 40.8\n",
-      "time: 40.9\n",
-      "time: 41.0\n",
-      "time: 41.1\n",
-      "time: 41.2\n",
-      "time: 41.3\n",
-      "time: 41.4\n",
-      "time: 41.5\n",
-      "time: 41.6\n",
-      "time: 41.7\n",
-      "time: 41.8\n",
-      "time: 41.9\n",
-      "time: 42.0\n",
-      "time: 42.1\n",
-      "time: 42.2\n",
-      "time: 42.3\n",
-      "time: 42.4\n",
-      "time: 42.5\n",
-      "time: 42.6\n",
-      "time: 42.7\n",
-      "time: 42.8\n",
-      "time: 42.9\n",
-      "time: 43.0\n",
-      "time: 43.1\n",
-      "time: 43.2\n",
-      "time: 43.3\n",
-      "time: 43.4\n",
-      "time: 43.5\n",
-      "time: 43.6\n",
-      "time: 43.7\n",
-      "time: 43.8\n",
-      "time: 43.9\n",
-      "time: 44.0\n",
-      "time: 44.1\n",
-      "time: 44.2\n",
-      "time: 44.3\n",
-      "time: 44.4\n",
-      "time: 44.5\n",
-      "time: 44.6\n",
-      "time: 44.7\n",
-      "time: 44.8\n",
-      "time: 44.9\n",
-      "time: 45.0\n",
-      "time: 45.1\n",
-      "time: 45.2\n",
-      "time: 45.3\n",
-      "time: 45.4\n",
-      "time: 45.5\n",
-      "time: 45.6\n",
-      "time: 45.7\n",
-      "time: 45.8\n",
-      "time: 45.9\n",
-      "time: 46.0\n",
-      "time: 46.1\n",
-      "time: 46.2\n",
-      "time: 46.3\n",
-      "time: 46.4\n",
-      "time: 46.5\n",
-      "time: 46.6\n",
-      "time: 46.7\n",
-      "time: 46.8\n",
-      "time: 46.9\n",
-      "time: 47.0\n",
-      "time: 47.1\n",
-      "time: 47.2\n",
-      "time: 47.3\n",
-      "time: 47.4\n",
-      "time: 47.5\n",
-      "time: 47.6\n",
-      "time: 47.7\n",
-      "time: 47.8\n",
-      "time: 47.9\n",
-      "time: 48.0\n",
-      "time: 48.1\n",
-      "time: 48.2\n",
-      "time: 48.3\n",
-      "time: 48.4\n",
-      "time: 48.5\n",
-      "time: 48.6\n",
-      "time: 48.7\n",
-      "time: 48.8\n",
-      "time: 48.9\n",
-      "time: 49.0\n",
-      "time: 49.1\n",
-      "time: 49.2\n",
-      "time: 49.3\n",
-      "time: 49.4\n",
-      "time: 49.5\n",
-      "time: 49.6\n",
-      "time: 49.7\n",
-      "time: 49.8\n",
-      "time: 49.9\n",
-      "time: 50.0\n",
-      "Total time of simulation: 67.96719733 s\n"
+     "ename": "LoadError",
+     "evalue": "DimensionMismatch: array could not be broadcast to match destination",
+     "output_type": "error",
+     "traceback": [
+      "DimensionMismatch: array could not be broadcast to match destination",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[0m\u001b[1mcheck_broadcast_shape\u001b[22m",
+      "\u001b[90m   @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mbroadcast.jl:579\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [2] \u001b[0m\u001b[1mcheck_broadcast_axes\u001b[22m",
+      "\u001b[90m   @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mbroadcast.jl:582\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [3] \u001b[0m\u001b[1minstantiate\u001b[22m",
+      "\u001b[90m   @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mbroadcast.jl:309\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [4] \u001b[0m\u001b[1mmaterialize!\u001b[22m",
+      "\u001b[90m   @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mbroadcast.jl:914\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [5] \u001b[0m\u001b[1mmaterialize!\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mdest\u001b[39m::\u001b[0mMatrix\u001b[90m{ComplexF64}\u001b[39m, \u001b[90mbc\u001b[39m::\u001b[0mBase.Broadcast.Broadcasted\u001b[90m{LinearAlgebra.StructuredMatrixStyle{Diagonal}, Nothing, typeof(identity), Tuple{Diagonal{ComplexF64, Vector{ComplexF64}}}}\u001b[39m\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m   @\u001b[39m \u001b[90mBase.Broadcast\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mbroadcast.jl:911\u001b[24m\u001b[39m",
+      " [6] \u001b[0m\u001b[1minit_params\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mIn[12]:40\u001b[24m\u001b[39m",
+      " [7] \u001b[0m\u001b[1mmain\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mIn[16]:8\u001b[24m\u001b[39m",
+      " [8] top-level scope",
+      "\u001b[90m   @\u001b[39m \u001b[90m\u001b[4mIn[17]:1\u001b[24m\u001b[39m"
      ]
     }
    ],
@@ -1297,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d6f98807-a240-45f5-9d9a-2bc9e9946eaf",
    "metadata": {},
    "outputs": [],
@@ -1312,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "fa6a3104-1635-41f9-84be-57429b44cf35",
    "metadata": {},
    "outputs": [
@@ -1336,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4dfdb90b-1ca4-4273-b953-14b0a69a130a",
    "metadata": {},
    "outputs": [],
@@ -1359,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "759c881c-ece4-461a-8215-589b7634be89",
    "metadata": {},
    "outputs": [],
@@ -1374,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "dc5836e1-c255-4bf6-9dd6-6558c4b16686",
    "metadata": {},
    "outputs": [],
@@ -1391,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "1ed4f39c-48aa-4e9e-8669-b2f6ad4bd96c",
    "metadata": {},
    "outputs": [],
@@ -1440,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "2e6d09c9-16a7-4f0c-8ef7-5fe37fb3047a",
    "metadata": {},
    "outputs": [
@@ -1494,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "dba68ee5-4e3a-4f9a-b068-8715f4bac9f9",
    "metadata": {},
    "outputs": [
@@ -1547,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d49f0918-d2ae-4ea6-8a64-6175c42c76d4",
    "metadata": {},
    "outputs": [
@@ -1599,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6103284b-250e-46ef-bdb7-19626ee4fe47",
    "metadata": {},
    "outputs": [
@@ -1649,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1369,
+   "execution_count": null,
    "id": "ee8781fc-bc84-44f4-af93-f3e9573258d2",
    "metadata": {},
    "outputs": [
@@ -1702,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "c24a606b-5616-4a8c-a744-c21168605ce6",
    "metadata": {},
    "outputs": [
@@ -1725,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "68c5051a-a04e-4e7f-88eb-27065298725f",
    "metadata": {},
    "outputs": [],
@@ -1743,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "8b275d74-47e1-4b67-b3e6-526833699e2a",
    "metadata": {},
    "outputs": [],
@@ -1768,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "411d15d8-4c20-4b6a-a001-3e1c5e7b5add",
    "metadata": {},
    "outputs": [],
@@ -1784,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "364b3698-2cbf-47f6-a866-13a4cdc251b8",
    "metadata": {},
    "outputs": [],
@@ -1851,15 +1389,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.3",
+   "display_name": "Julia 1.10.9",
    "language": "julia",
-   "name": "julia-1.11"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.3"
+   "version": "1.10.9"
   }
  },
  "nbformat": 4,
