Bug fixed for bias

--- a/Algorithms/KBE-Test1.ipynb
+++ b/Algorithms/KBE-Test1.ipynb
@@ -425,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "e241a158-6243-41d7-9f9c-a3e4ec3a8d99",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initial conditions\n",
     "# Relatively small interaction parameter\n",
-    "U₀ = 0.05\n",
+    "U₀ = 0.05   # Bias\n",
     "U₁ = 0\n",
     "model = FermiOpenModel(Δ1 = t1-> U₀,Δ2 = t2-> U₁)\n",
     "N = zeros(L*nσ)\n",
