--- a/NewGraphics.ipynb
+++ b/NewGraphics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4da8525a-0176-4c80-914e-62a0d0966d48",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "30"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "063b8360",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "94409aba",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        " 0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,13 +92,13 @@
    "source": [
     "name=\"PIC_1\"\n",
     "\n",
-    "cspins_f = readdlm(\"./TD/data/cspins_$(name)_jl.txt\" , ' ')\n",
-    "seq_f = readdlm(\"./TD/data/seq_$(name)_jl.txt\" , ' ') ;\n",
+    "cspins_f = readdlm(\"./TDNEGF/data/cspins_$(name)_jl.txt\" , ' ')\n",
+    "seq_f = readdlm(\"./TDNEGF/data/seq_$(name)_jl.txt\" , ' ') ;\n",
     "#rkvec_f = readdlm(\"./data/rkvec_jl.txt\", ',' ,Complex{Float64} ) ;\n",
-    "sneq_f = readdlm(\"./TD/data/sneq_$(name)_jl.txt\" , ' ')\n",
-    "seq_f = readdlm(\"./TD/data/seq_$(name)_jl.txt\" , ' ')\n",
-    "sc_f = readdlm(\"./TD/data/sc_$(name)_jl.txt\" , ' ')\n",
-    "cc_f = readdlm(\"./TD/data/cc_$(name)_jl.txt\" , ' ') ;\n",
+    "sneq_f = readdlm(\"./TDNEGF/data/sneq_$(name)_jl.txt\" , ' ')\n",
+    "seq_f = readdlm(\"./TDNEGF/data/seq_$(name)_jl.txt\" , ' ')\n",
+    "sc_f = readdlm(\"./TDNEGF/data/sc_$(name)_jl.txt\" , ' ')\n",
+    "cc_f = readdlm(\"./TDNEGF/data/cc_$(name)_jl.txt\" , ' ') ;\n",
     "\n",
     "x  = sc_f[:,1]\n",
     "y1 = sc_f[:,4]\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3040e45d-79e7-4623-acf3-4cdd4a445c99",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b772c99e-770c-4b40-96ec-249367e1e768",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f3258701",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "\"PIC_2\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,23 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "038394ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cspins_f = readdlm(\"./TD/data/cspins_$(name)_jl.txt\" , ' ')\n",
-    "seq_f = readdlm(\"./TD/data/seq_$(name)_jl.txt\" , ' ') ;\n",
+    "cspins_f = readdlm(\"./TDNEGF/data/cspins_$(name)_jl.txt\" , ' ')\n",
+    "seq_f = readdlm(\"./TDNEGF/data/seq_$(name)_jl.txt\" , ' ') ;\n",
     "#rkvec_f = readdlm(\"./data/rkvec_jl.txt\", ',' ,Complex{Float64} ) ;\n",
-    "sneq_f = readdlm(\"./TD/data/sneq_$(name)_jl.txt\" , ' ')\n",
-    "seq_f = readdlm(\"./TD/data/seq_$(name)_jl.txt\" , ' ')\n",
-    "sc_f = readdlm(\"./TD/data/sc_$(name)_jl.txt\" , ' ')\n",
-    "cc_f = readdlm(\"./TD/data/cc_$(name)_jl.txt\" , ' ') ;"
+    "sneq_f = readdlm(\"./TDNEGF/data/sneq_$(name)_jl.txt\" , ' ')\n",
+    "seq_f = readdlm(\"./TDNEGF/data/seq_$(name)_jl.txt\" , ' ')\n",
+    "sc_f = readdlm(\"./TDNEGF/data/sc_$(name)_jl.txt\" , ' ')\n",
+    "cc_f = readdlm(\"./TDNEGF/data/cc_$(name)_jl.txt\" , ' ') ;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1535f0b9",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "62fae515",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "\"PIC_3\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,23 +448,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "215581dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cspins_f = readdlm(\"./TD/data/cspins_$(name)_jl.txt\" , ' ')\n",
-    "seq_f = readdlm(\"./TD/data/seq_$(name)_jl.txt\" , ' ') ;\n",
+    "cspins_f = readdlm(\"./TDNEGF/data/cspins_$(name)_jl.txt\" , ' ')\n",
+    "seq_f = readdlm(\"./TDNEGF/data/seq_$(name)_jl.txt\" , ' ') ;\n",
     "#rkvec_f = readdlm(\"./data/rkvec_jl.txt\", ',' ,Complex{Float64} ) ;\n",
-    "sneq_f = readdlm(\"./TD/data/sneq_$(name)_jl.txt\" , ' ')\n",
-    "seq_f = readdlm(\"./TD/data/seq_$(name)_jl.txt\" , ' ')\n",
-    "sc_f = readdlm(\"./TD/data/sc_$(name)_jl.txt\" , ' ')\n",
-    "cc_f = readdlm(\"./TD/data/cc_$(name)_jl.txt\" , ' ') ;"
+    "sneq_f = readdlm(\"./TDNEGF/data/sneq_$(name)_jl.txt\" , ' ')\n",
+    "seq_f = readdlm(\"./TDNEGF/data/seq_$(name)_jl.txt\" , ' ')\n",
+    "sc_f = readdlm(\"./TDNEGF/data/sc_$(name)_jl.txt\" , ' ')\n",
+    "cc_f = readdlm(\"./TDNEGF/data/cc_$(name)_jl.txt\" , ' ') ;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d9e16797",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b0414321",
    "metadata": {},
    "outputs": [
